--- a/periodic_table_app/templates/periodic_table.html
+++ b/periodic_table_app/templates/periodic_table.html
@@ -8,23 +8,30 @@
 </head>
 <body>
     <div class="periodic-table">
+        <!-- Column headers -->
+        {% for i in range(19) %}
+        <div class="header column-header">{{ i if i != 0 else '' }}</div>
+        {% endfor %}
+        
+        <!-- Row headers and elements -->
         {% for row_index, row in periodic_table %}
-            <div class="periodic-row">
-                {% for element_symbol in row %}
-                    {% if element_symbol %}
-                        {% set element_info = element_ids.get(element_symbol, ('', '', '')) %}
-                        <div class="element" data-id="{{ element_info[0] }}" data-name="{{ element_info[1] }}" data-mass="{{ element_info[2] }}">
-                            <div class="symbol">{{ element_symbol }}</div>
-                            <div class="details">
-                                <div class="name">{{ element_info[1] }}</div>
-                                <div class="mass">{{ element_info[2] }}</div>
-                            </div>
-                        </div>
-                    {% else %}
-                        <div class="empty-element"></div>
-                    {% endif %}
-                {% endfor %}
+        <!-- Row header -->
+        <div class="header row-header">{{ row_index + 1 }}</div>
+        
+        {% for element_symbol in row %}
+        {% if element_symbol %}
+        {% set element_info = element_ids.get(element_symbol, ('', '', '')) %}
+        <div class="element" data-id="{{ element_info[0] }}" data-name="{{ element_info[1] }}" data-mass="{{ element_info[2] }}">
+            <div class="symbol">{{ element_symbol }}</div>
+            <div class="details">
+                <div class="name">{{ element_info[1] }}</div>
+                <div class="mass">{{ element_info[2] }}</div>
             </div>
+        </div>
+        {% else %}
+        <div class="empty-element"></div>
+        {% endif %}
+        {% endfor %}
         {% endfor %}
     </div>
     <script>
